examples/invalid/AnnotationsConflict.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

@extensibility(FINAL)
@mutable
struct BadAnno {
    int32_t id;
};

